--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@
 .pub-cache/
 .pub/
 /build/
+GoogleService-Info.plist
+google-services.json
 
 # Web related
 lib/generated_plugin_registrant.dart
