--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   flutter_cupertino_date_picker: ^1.0.12
   tutorial_coach_mark: ^0.3.0
   table_calendar: ^2.2.2
+  firebase_analytics: ^5.0.11
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
