added web suppport flutter

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,7 @@ org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+RELEASE_STORE_FILE= /Users/carlosmoyano/Documents/my-release-key.keystore
+RELEASE_STORE_PASSWORD=24682468
+RELEASE_KEY_ALIAS=alias_name
+RELEASE_KEY_PASSWORD=24682468
