--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.4+4
+version: 1.0.5+5
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -33,6 +33,7 @@ dependencies:
   tutorial_coach_mark: ^0.3.0
   table_calendar: ^2.2.2
   firebase_analytics: ^5.0.11
+  url_launcher: ^5.4.2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
