--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.5+5
+version: 1.0.6+6
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -21,6 +21,7 @@ dependencies:
     sdk: flutter
   intl: ^0.16.1
   firebase_admob: ^0.9.3+1
+  firebase_database: ^3.1.3
   google_sign_in: ^4.0.7
   provider: ^4.0.4
   firebase_auth: ^0.14.0+5
